<resources>
    <string name="app_name">PathfinderProjekt</string>
    <string name="title_activity_pagina_principal">PaginaPrincipal</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="force">FUE</string>
    <string name="dexterity">DES</string>
    <string name="constitution">CON</string>
    <string name="intelligence">INT</string>
    <string name="wisdom">SAB</string>
    <string name="charisma">CAR</string>
    <string-array name="punts">
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>
</resources>