<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsPage">

    <EditText
    android:layout_width="76dp"
    android:layout_height="78dp"
    android:inputType="number"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteX="98dp"
    tools:layout_editor_absoluteY="55dp" />

    <EditText
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:inputType="number"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="537dp" />

    <TextView
        android:id="@+id/chaText"
        android:layout_width="78dp"
        android:layout_height="43dp"
        android:layout_marginStart="196dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="555dp" />

    <TextView
        android:id="@+id/wisText"
        android:layout_width="78dp"
        android:layout_height="43dp"
        android:layout_marginStart="196dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/intText"
        android:layout_width="78dp"
        android:layout_height="43dp"
        android:layout_marginStart="196dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="362dp" />

    <TextView
        android:id="@+id/conText"
        android:layout_width="78dp"
        android:layout_height="43dp"
        android:layout_marginStart="188dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="268dp" />

    <TextView
        android:id="@+id/dexTest"
        android:layout_width="78dp"
        android:layout_height="43dp"
        android:layout_marginStart="188dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="171dp" />

    <TextView
        android:id="@+id/forText"
        android:layout_width="78dp"
        android:layout_height="43dp"
        android:layout_marginStart="188dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="72dp" />

    <EditText
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:inputType="number"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="437dp" />

    <EditText
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:inputType="number"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="346dp" />

    <EditText
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:inputType="number"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="251dp" />

    <EditText
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:inputType="number"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="154dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="78dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:text="@string/force"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="72dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="78dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:text="@string/dexterity"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="171dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="78dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:text="@string/constitution"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="268dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="78dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:text="@string/wisdom"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="447dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="78dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:text="@string/charisma"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="555dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="78dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:text="@string/intelligence"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="362dp" />

</androidx.constraintlayout.widget.ConstraintLayout>